errorfreetext-k8s/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: errorfreetext
  labels:
    name: errorfreetext
    environment: production
